2005-10-12  Jonathan Pryor <jonpryor@vt.edu>

	* UnixStream.cs: Check for EROFS and EINVAL in Flush().  Snorp was getting
	  an exception when he created a UnixStream around a socket, because
	  sockets can't be flushed.  It should be acceptable to create a UnixStream
	  around a socket, so don't throw an exception in this scenario.

2005-10-06  Jonathan Pryor <jonpryor@vt.edu>

	* UnixDirectory.cs, UnixDirectoryInfo.cs UnixFile.cs, UnixFileSystemInfo.cs, 
	  UnixGroupInfo.cs, UnixIOException.cs, UnixStream.cs, UnixUserInfo.cs:
	  API Review: Obsolete appropriate members and add appropriate overloads for
	  pending move to Mono.Unix.Native types.
	* UnixMarshal.cs: API Review; add StringToAlloc().

2005-09-26  Jonathan Pryor <jonpryor@vt.edu>

	* UnixFileSystemInfo.cs: Exists shouldn't use access(2), as (1) Exists isn't
	  virtual, and (2) access(2) errors if you try to access(2) a symlink which
	  points nowhere.  Use (l)stat(2) instead, via GetFileStatus(), as this lets
	  UnixSymbolicLinkInfo behave properly.
	* UnixSymbolicLinkInfo.cs: The Contents property should return null if the
	  symlink target doesn't exist.

2005-09-20  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Add [Map] to AccessMode and MmapProt, as the Mono.Unix.Native
	  replacements go by different names (AccessModes, MmapProts), but we need
	  to continue generating the mapping code for these types (backward compat).

2005-09-20  Jonathan Pryor <jonpryor@vt.edu>

	* CdeclFunction.cs: [Obsolete]d by Mono.Unix.Native.CdeclFunction.
	* make-map.cs: Remove.
	* Stdlib.cs: [Obsolete] the types; use the Mono.Unix.Native.* types instead.
	* StdioFileStream.cs: Add GC.KeepAlive statements to prevent premature GC's
	  (FxCop suggestion).
	* Syscall.cs: Remove [Map] attribute from all types; [CLSCompliant(false)]
	  work; [Obsolete] all types and suggest using the Mono.Unix.Native.*
	  replacements; remove [IncludeAttribute] -- superseded by